--- a/css/style_2.css
+++ b/css/style_2.css
@@ -1,7 +1,7 @@
 		/* Page en général */
 body {
 	font-family: "Lucida Grande", "Lucida Sans Unicode", "Lucida Sans", Geneva, Verdana, sans-serif;
-	color: #333333;
+	color: #666666;
 	margin: 0;
 	padding: 0;
 }
@@ -13,7 +13,7 @@ nav a{
 	padding-bottom: 12px;
 }
 
-		/* Header & titre */
+		/* Header & titre - couleurs */
 header{
 	background-color: #000000;
 }
@@ -23,32 +23,36 @@ header a{
 	color: inherit;
 }
 
-#bandeau-entete, #bandeau-entete h1 {
+#bandeau-entete, #bandeau-entete h1, #bandeau-entete p {
 	color: white;
-
-}
-
-
-	/* Header & titre - centrer*/
-#bandeau-entete h1, #bandeau-entete p {
 	width: 75%;
 	margin-top: 0;
 	margin-bottom: 10px;
 	margin-left: auto;
 	margin-right: auto;
 }
-
-		/* Navigation */
-#navigation-site{
-	background-color:#404040;
-	color: light gray;
-	width: 100%;
-	display: inline-block;
-
+#bandeau-entete p {
+	color: #666;
 }
 
+		/* Barre de nav */
+
+#barre-menu{
+	background-color:#404040;
+    margin: 0px;
+}
+
+#navigation-site{
+	width: 75%;
+    margin-right: auto;
+    margin-left: auto;
+	color: #ccc;
+}
+
+	/* Barre de nav - liens */
 nav ul{
-	margin:0;
+	margin: 0;
+    padding: 0;
 	list-style-type: none;
 }
 
