--- a/css/style_header.css
+++ b/css/style_header.css
@@ -10,7 +10,6 @@ html {
 
 body {
 	font-family: "Lato-font","Lucida Grande", "Lucida Sans Unicode", "Lucida Sans", Geneva, Verdana, sans-serif;
-
 	color: #666666;
 	margin: 0;
 	padding: 0;
@@ -65,9 +64,10 @@ header a{
 
 #barre-menu-centrer{
 	font-size: 1.5rem;
-	width: 75%;
     margin-right: auto;
     margin-left: auto;
+	max-width: 960px;
+	width: 75%;
 }
 
 #navigation-site{
