--- a/css/style_header.css
+++ b/css/style_header.css
@@ -100,6 +100,10 @@ header{
 	position: relative;
 }
 
+#menu-toggle{
+	display: none;
+}
+
 nav h4{
 	font-size: 1.5rem;
 }
@@ -111,8 +115,53 @@ nav h4{
 	padding-left: 0px;
 	padding-right: 4rem;
 	list-style-type: none;
+	list-style-image: none;
 }
 
 #nav-menu li{
-	display: list-item;
+	display: inline-block;
+}
+
+#nav-menu li a{
+	color: #ccc;
+	display: block;
+	font-size: 1.1rem;
+	font-weight: 400;
+	letter-spacing: 2px;
+	line-height: 1.2rem;
+	text-decoration: none;
+	text-transform: uppercase;
+	padding-top: 1.2rem;
+	padding-right: 2rem;
+	padding-bottom: 1.2rem;
+	padding-left: 2rem;
+	box-sizing: border-box;
+	transition-property: all;
+	transition-duration: 0.3s;
+	transition-timing-function: initial;
+	transition-delay: initial;
+}
+
+#nav-menu li:hover > a, .nav-menu li a:hover{
+	background-color: #303030;
+	color: #fff;
+	-webkit-transition: none;
+	transition: none;
+}
+
+#nav-menu ul li:hover > ul {
+	display: block;
+	opacity: 1;
+}
+
+#nav-menu .sous-menu{
+	background-color:#404040;
+	border-top: 0;
+	box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.5);
+	display: none;
+	opacity: 0;
+	padding: 0;
+	position: absolute;
+	left: 0;
+	z-index: 9999;
 }
